--- a/05_GOVERNANCE_AND_PROTOCOL_UPDATES/v5.1-docs/v5.1_ Governance.md
+++ b/05_GOVERNANCE_AND_PROTOCOL_UPDATES/v5.1-docs/v5.1_ Governance.md
@@ -13,4 +13,6 @@ Checklist:
 - [ ] Security review (TSC)
 - [ ] Two independent auditors (names)
 - [ ] Update DECISION-LOG.md with PR reference
-- [ ] Merge only after 2/3 reviewer approval
+
+Merge only after 2/3 reviewer approval
+
