--- a/05_GOVERNANCE_AND_PROTOCOL_UPDATES/v5.1-docs/v5.1_ Governance.md
+++ b/05_GOVERNANCE_AND_PROTOCOL_UPDATES/v5.1-docs/v5.1_ Governance.md
@@ -1,18 +1,20 @@
-Title: v5.1 — Governance: incentives, privacy, legal, social red-team, test mapping & emergency
-
 Summary:
-This PR closes several governance documentation gaps identified in the v5.0 audit:
-- Adds HCB incentive & slashing model
-- Adds privacy tradeoffs & ZK templates
-- Adds legal considerations checklist for adopters
-- Adds a quarterly social red-team playbook
-- Adds a test->fix matrix for traceability
-- Adds emergency commit-reveal snippet (UPGRADE_AND_EMERGENCY.md)
+This PR fills critical governance documentation gaps identified during the v5.0 audit and Grok's line-by-line verification.
+
+Changes:
+- Add HCB incentive & slashing model (HCB_INCENTIVES_v5.md)
+- Add privacy tradeoffs & ZK templates (PRIVACY_TRADEOFFS.md)
+- Add legal considerations checklist (LEGAL_CONSIDERATIONS.md)
+- Add social red-team playbook (SOCIAL_REDTEAM_PLAYBOOK.md)
+- Add test->fix matrix (tests/test_to_fix_matrix.csv)
+- Add emergency commit-reveal & rollback snippet (UPGRADE_AND_EMERGENCY.md)
+- Append: dashboard spec & HCB demo harness snippets to STRESS_TEST_REPORT_V1.0.md & Protocol_ST8_Access_Decoupling.md
 
 Checklist:
 - [ ] Security review (TSC)
 - [ ] Two independent auditors (names)
 - [ ] Update DECISION-LOG.md with PR reference
+- [ ] Merge only after 2/3 reviewer approval
 
-Merge only after 2/3 reviewer approval
-
+Notes:
+Please run the governance CI (/.github/workflows/governance-check.yml) included in this PR to verify doc presence and basic formatting before merging.
